package com.telenav.fiasco.tools.compiler;

import com.telenav.fiasco.tools.Tool;

public interface Compiler extends Tool
{

}
